Corrected whitespace on 404 error handling page

--- a/public/stylesheets/page-not-found.css
+++ b/public/stylesheets/page-not-found.css
@@ -8,33 +8,53 @@ a.error-redirect {
 
 .error-content {
     width: auto;
-    height: auto;
+    height: 100vh;
 }
 
 .content-ctn {
     flex-direction: column;
     background-color: rgba(196,196,196,1);
-    width: 600px;
-    height: 400px;
+    width: 700px;
+    height: 450px;
     border-radius: 20px;
 }
 
-h1 {
-    /* padding: 20px 0; */
+.content-ctn img {
+    width: 250px;
+    height: 144px;
 }
 
 .error-subheading {
     padding: 40px 0;
+    font-size: 16px;
 }
 
 .error-redirect {
     border: 1px solid black;
+    transition: all 0.2s ease-out;
+    text-align: center;
+}
+
+.error-redirect:hover {
+    border: 1px solid white;
+    color: white;
+
+}
+
+.cardar-home-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90px;
+    padding-bottom: 20px;
 }
 
 a.error-redirect {
     width: 200px;
     height: 60px;
-    border-radius: 10px;
+    border-radius: 40px;
     color: black;
     text-decoration: none;
+    font-weight: bold;
 }
